# HumanScript

./: CMakeLists.txt
examples/: test.humanscript  test_hs_executable  test_hs_generated.cpp
src/: ast.h  code_generator.cpp  code_generator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semantic_analyzer.cpp  semantic_analyzer.h
